deploy-as-code/charts/backbone-services/pgadmin4/template.yaml
---
# Source: pgadmin4/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgadmin-pgadmin4
  namespace: "backbone-prod"
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: pgadmin
    app.kubernetes.io/name: pgadmin4
    app.kubernetes.io/version: "9.8"
    helm.sh/chart: pgadmin4-1.50.0
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pgadmin4
      app.kubernetes.io/instance: pgadmin
  ingress:
  - ports:
    - port: 80
---
# Source: pgadmin4/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-pgadmin4
  namespace: "backbone-prod"
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: pgadmin
    app.kubernetes.io/name: pgadmin4
    app.kubernetes.io/version: "9.8"
    helm.sh/chart: pgadmin4-1.50.0
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: pgadmin4
    app.kubernetes.io/instance: pgadmin
---
# Source: pgadmin4/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-pgadmin4
  namespace: "backbone-prod"
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: pgadmin
    app.kubernetes.io/name: pgadmin4
    app.kubernetes.io/version: "9.8"
    helm.sh/chart: pgadmin4-1.50.0
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: pgadmin4
      app.kubernetes.io/instance: pgadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pgadmin4
        app.kubernetes.io/instance: pgadmin
      annotations:
        checksum/secret: e390e04b8410937d98ba0b792dd6c81983b782d37d360215c60ef55223f3907b
    spec:
      automountServiceAccountToken: false
      containers:
        - name: pgadmin4
          image: "docker.io/dpage/pgadmin4:9.8"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              port: http
              path: /misc/ping
              scheme: HTTP
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              port: http
              path: /misc/ping
              scheme: HTTP
            failureThreshold: 30
            periodSeconds: 2
          readinessProbe:
            httpGet:
              port: http
              path: /misc/ping
              scheme: HTTP
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
          volumeMounts:
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin
              subPath: ""
          resources:
            {}
      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin-pgadmin4
      securityContext:
        fsGroup: 5050
        runAsGroup: 5050
        runAsUser: 5050
---
# Source: pgadmin4/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "pgadmin-pgadmin4-test-connection"
  namespace: "backbone-prod"
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: pgadmin
    app.kubernetes.io/name: pgadmin4
    app.kubernetes.io/version: "9.8"
    helm.sh/chart: pgadmin4-1.50.0
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": hook-succeeded
spec:
  securityContext:
    runAsNonRoot: true
    fsGroup: 5051
    runAsGroup: 5051
    runAsUser: 5051
  containers:
    - name: wget
      image: "docker.io/busybox:latest"
      command:
        - /bin/sh
        - -ec
        - |
          response=$(wget -qSO - http://${PGADMIN_HOST}:${PGADMIN_PORT} 2>&1)
          check=$(echo $response | grep -c '200 OK'); echo $check; if [[ $check -gt 0 ]]; then echo "Response OK"; else exit 1; fi
      resources:
        {}
      securityContext:
        readOnlyRootFilesystem: true
  restartPolicy: Never
